finished adding pics for index/home, products, promotions

--- a/promotions.html
+++ b/promotions.html
@@ -59,8 +59,8 @@
                         <div class="carousel-item active">
                             <div class="row align-items-center">
                                 <div class="col-md-6">
-                                    <img src="/placeholder.svg?height=300&width=400" 
-                                         class="img-fluid rounded-4" alt="Summer Sale">
+                                    <img src="images/SummerAdventureSale.png" 
+                                         class="img-fluid rounded-4" alt="Summer Sale" style="height: 300px; width: 400px;">
                                 </div>
                                 <div class="col-md-6">
                                     <div class="p-4">
@@ -75,8 +75,8 @@
                         <div class="carousel-item">
                             <div class="row align-items-center">
                                 <div class="col-md-6">
-                                    <img src="/placeholder.svg?height=300&width=400" 
-                                         class="img-fluid rounded-4" alt="Tent Clearance">
+                                    <img src="images/TentClearanceEvent.png" 
+                                         class="img-fluid rounded-4" alt="Tent Clearance" style="height: 300px; width: 400px;">
                                 </div>
                                 <div class="col-md-6">
                                     <div class="p-4">
@@ -91,8 +91,8 @@
                         <div class="carousel-item">
                             <div class="row align-items-center">
                                 <div class="col-md-6">
-                                    <img src="/placeholder.svg?height=300&width=400" 
-                                         class="img-fluid rounded-4" alt="Bundle Deals">
+                                    <img src="images/CompleteCampingBundles.png" 
+                                         class="img-fluid rounded-4" alt="Bundle Deals" style="height: 300px; width: 400px;">
                                 </div>
                                 <div class="col-md-6">
                                     <div class="p-4">
@@ -129,7 +129,7 @@
                         <div class="position-absolute top-0 start-0 m-3">
                             <span class="badge bg-danger fs-6">30% OFF</span>
                         </div>
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="images/WaterproofHikingBoots.png" 
                              class="card-img-top" alt="Waterproof Boots">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Waterproof Hiking Boots</h5>
@@ -157,7 +157,7 @@
                         <div class="position-absolute top-0 start-0 m-3">
                             <span class="badge bg-danger fs-6">25% OFF</span>
                         </div>
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="images/LEDCampingLantern.png" 
                              class="card-img-top" alt="LED Camping Lantern">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">LED Camping Lantern</h5>
@@ -185,7 +185,7 @@
                         <div class="position-absolute top-0 start-0 m-3">
                             <span class="badge bg-danger fs-6">35% OFF</span>
                         </div>
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="images/FoldingCampChair.png" 
                              class="card-img-top" alt="Folding Camp Chair">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Folding Camp Chair</h5>
@@ -213,7 +213,7 @@
                         <div class="position-absolute top-0 start-0 m-3">
                             <span class="badge bg-danger fs-6">20% OFF</span>
                         </div>
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="images/PortableWaterFilter.png" 
                              class="card-img-top" alt="Water Filter">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Portable Water Filter</h5>
@@ -254,7 +254,7 @@
                                 <i class="fas fa-crown me-1"></i>BESTSELLER
                             </span>
                         </div>
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="images/AlpineProTent.png" 
                              class="card-img-top" alt="Premium Tent">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Alpine Pro Tent</h5>
@@ -282,7 +282,7 @@
                                 <i class="fas fa-fire me-1"></i>HOT
                             </span>
                         </div>
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="images/TrailChefSet.png" 
                              class="card-img-top" alt="Cookware Set">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Trail Chef Set</h5>
@@ -310,7 +310,7 @@
                                 <i class="fas fa-thumbs-up me-1"></i>TOP RATED
                             </span>
                         </div>
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="images/SummitSleepingBag.png" 
                              class="card-img-top" alt="Sleeping Bag">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Summit Sleeping Bag</h5>
@@ -346,7 +346,7 @@
                     <div class="glass-panel p-4">
                         <div class="row align-items-center">
                             <div class="col-md-6">
-                                <img src="/placeholder.svg?height=250&width=300" 
+                                <img src="images/TrailChefSet.png" 
                                      class="img-fluid rounded-4" alt="Beginner Bundle">
                             </div>
                             <div class="col-md-6">
@@ -372,7 +372,7 @@
                     <div class="glass-panel p-4">
                         <div class="row align-items-center">
                             <div class="col-md-6">
-                                <img src="/placeholder.svg?height=250&width=300" 
+                                <img src="images/SummerAdventureSale.png" 
                                      class="img-fluid rounded-4" alt="Pro Bundle">
                             </div>
                             <div class="col-md-6">
