finished index, product, detail, promotion, review, membership

--- a/membership.html
+++ b/membership.html
@@ -318,7 +318,7 @@
                 <div class="col-lg-4">
                     <div class="glass-card p-4 h-100">
                         <div class="d-flex align-items-center mb-3">
-                            <img src="/placeholder.svg?height=50&width=50" 
+                            <img src="images/UserPfp.png" 
                                  class="rounded-circle me-3" alt="Member" width="50" height="50">
                             <div>
                                 <h6 class="text-white mb-0">Sarah Johnson</h6>
@@ -338,7 +338,7 @@
                 <div class="col-lg-4">
                     <div class="glass-card p-4 h-100">
                         <div class="d-flex align-items-center mb-3">
-                            <img src="/placeholder.svg?height=50&width=50" 
+                            <img src="images/UserPfp.png" 
                                  class="rounded-circle me-3" alt="Member" width="50" height="50">
                             <div>
                                 <h6 class="text-white mb-0">Mike Rodriguez</h6>
@@ -358,7 +358,7 @@
                 <div class="col-lg-4">
                     <div class="glass-card p-4 h-100">
                         <div class="d-flex align-items-center mb-3">
-                            <img src="/placeholder.svg?height=50&width=50" 
+                            <img src="images/UserPfp.png" 
                                  class="rounded-circle me-3" alt="Member" width="50" height="50">
                             <div>
                                 <h6 class="text-white mb-0">Lisa Chen</h6>
