--- a/product_detail.html
+++ b/product_detail.html
@@ -49,23 +49,23 @@
                 <div class="row g-5">
                     <div class="col-lg-6">
                         <div class="product-images">
-                            <img src="/placeholder.svg?height=400&width=500" 
+                            <img src="images/AlpineProTent.png" 
                                  class="img-fluid rounded-4 mb-3" alt="Alpine Pro Tent" id="mainImage">
                             <div class="row g-2">
                                 <div class="col-3">
-                                    <img src="/placeholder.svg?height=100&width=100" 
+                                    <img src="images/AlpineProTent.png" 
                                          class="img-fluid rounded-3 thumbnail-img active" alt="Side View">
                                 </div>
                                 <div class="col-3">
-                                    <img src="/placeholder.svg?height=100&width=100" 
+                                    <img src="images/AlpineProTent1.png" 
                                          class="img-fluid rounded-3 thumbnail-img" alt="Interior">
                                 </div>
                                 <div class="col-3">
-                                    <img src="/placeholder.svg?height=100&width=100" 
+                                    <img src="images/AlpineProTent2.png" 
                                          class="img-fluid rounded-3 thumbnail-img" alt="Setup">
                                 </div>
                                 <div class="col-3">
-                                    <img src="/placeholder.svg?height=100&width=100" 
+                                    <img src="images/AlpineProTent3.png" 
                                          class="img-fluid rounded-3 thumbnail-img" alt="Packed">
                                 </div>
                             </div>
@@ -298,7 +298,7 @@
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card product-card h-100">
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="images/SummitSleepingBag.png" 
                              class="card-img-top" alt="Sleeping Bag">
                         <div class="card-body p-4">
                             <h6 class="card-title text-white">Summit Sleeping Bag</h6>
@@ -311,7 +311,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card product-card h-100">
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="images/ExplorerBackpack.png" 
                              class="card-img-top" alt="Backpack">
                         <div class="card-body p-4">
                             <h6 class="card-title text-white">Explorer Backpack</h6>
@@ -324,7 +324,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card product-card h-100">
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="images/PortableCampStove.png" 
                              class="card-img-top" alt="Camp Stove">
                         <div class="card-body p-4">
                             <h6 class="card-title text-white">Portable Camp Stove</h6>
@@ -337,7 +337,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card product-card h-100">
-                        <img src="/placeholder.svg?height=200&width=300" 
+                        <img src="images/LEDCampingLantern.png" 
                              class="card-img-top" alt="LED Lantern">
                         <div class="card-body p-4">
                             <h6 class="card-title text-white">LED Camping Lantern</h6>
