--- a/reviews.html
+++ b/reviews.html
@@ -127,7 +127,7 @@
                     <div class="glass-card p-4 mb-4 review-item" data-rating="5">
                         <div class="d-flex justify-content-between align-items-start mb-3">
                             <div class="d-flex align-items-center">
-                                <img src="/placeholder.svg?height=50&width=50" 
+                                <img src="images/UserPfp.png" 
                                      class="rounded-circle me-3" alt="Sarah M." width="50" height="50">
                                 <div>
                                     <h6 class="text-white mb-1">Sarah M.</h6>
@@ -161,7 +161,7 @@
                     <div class="glass-card p-4 mb-4 review-item" data-rating="5">
                         <div class="d-flex justify-content-between align-items-start mb-3">
                             <div class="d-flex align-items-center">
-                                <img src="/placeholder.svg?height=50&width=50" 
+                                <img src="images/UserPfp.png" 
                                      class="rounded-circle me-3" alt="Mike R." width="50" height="50">
                                 <div>
                                     <h6 class="text-white mb-1">Mike R.</h6>
@@ -195,7 +195,7 @@
                     <div class="glass-card p-4 mb-4 review-item" data-rating="4">
                         <div class="d-flex justify-content-between align-items-start mb-3">
                             <div class="d-flex align-items-center">
-                                <img src="/placeholder.svg?height=50&width=50" 
+                                <img src="images/UserPfp.png" 
                                      class="rounded-circle me-3" alt="Jennifer L." width="50" height="50">
                                 <div>
                                     <h6 class="text-white mb-1">Jennifer L.</h6>
@@ -229,7 +229,7 @@
                     <div class="glass-card p-4 mb-4 review-item" data-rating="5">
                         <div class="d-flex justify-content-between align-items-start mb-3">
                             <div class="d-flex align-items-center">
-                                <img src="/placeholder.svg?height=50&width=50" 
+                                <img src="images/UserPfp.png" 
                                      class="rounded-circle me-3" alt="David K." width="50" height="50">
                                 <div>
                                     <h6 class="text-white mb-1">David K.</h6>
@@ -263,7 +263,7 @@
                     <div class="glass-card p-4 mb-4 review-item" data-rating="4">
                         <div class="d-flex justify-content-between align-items-start mb-3">
                             <div class="d-flex align-items-center">
-                                <img src="/placeholder.svg?height=50&width=50" 
+                                <img src="images/UserPfp.png" 
                                      class="rounded-circle me-3" alt="Lisa T." width="50" height="50">
                                 <div>
                                     <h6 class="text-white mb-1">Lisa T.</h6>
@@ -349,7 +349,7 @@
                     <div class="glass-card p-4">
                         <h5 class="text-white mb-4">Most Reviewed Products</h5>
                         <div class="d-flex align-items-center mb-3">
-                            <img src="/placeholder.svg?height=60&width=60" 
+                            <img src="images/AlpineProTent.png" 
                                  class="rounded me-3" alt="Alpine Pro Tent" width="60" height="60">
                             <div>
                                 <h6 class="text-white mb-1">Alpine Pro Tent</h6>
@@ -364,7 +364,7 @@
                             </div>
                         </div>
                         <div class="d-flex align-items-center mb-3">
-                            <img src="/placeholder.svg?height=60&width=60" 
+                            <img src="images/TrailChefSet.png" 
                                  class="rounded me-3" alt="Trail Chef Set" width="60" height="60">
                             <div>
                                 <h6 class="text-white mb-1">Trail Chef Set</h6>
@@ -379,7 +379,7 @@
                             </div>
                         </div>
                         <div class="d-flex align-items-center">
-                            <img src="/placeholder.svg?height=60&width=60" 
+                            <img src="images/SummitSleepingBag.png" 
                                  class="rounded me-3" alt="Summit Sleeping Bag" width="60" height="60">
                             <div>
                                 <h6 class="text-white mb-1">Summit Sleeping Bag</h6>
