finished index, product, detail, promotion, review, membership, about, contact

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img src="/placeholder.svg?height=400&width=500" 
+                    <img src="images/CPSFounders.png" 
                          class="img-fluid rounded-4" alt="CPS Founders">
                 </div>
             </div>
@@ -117,7 +117,7 @@
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card text-center p-4">
-                        <img src="/placeholder.svg?height=150&width=150" 
+                        <img src="images/UserPfp.png" 
                              class="rounded-circle mb-3" alt="Mark Thompson" width="150" height="150">
                         <h5 class="text-white mb-2">Mark Thompson</h5>
                         <p class="text-forest mb-2">Founder & CEO</p>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card text-center p-4">
-                        <img src="/placeholder.svg?height=150&width=150" 
+                        <img src="images/UserPfp.png" 
                              class="rounded-circle mb-3" alt="Sarah Thompson" width="150" height="150">
                         <h5 class="text-white mb-2">Sarah Thompson</h5>
                         <p class="text-forest mb-2">Co-Founder & COO</p>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card text-center p-4">
-                        <img src="/placeholder.svg?height=150&width=150" 
+                        <img src="images/UserPfp.png" 
                              class="rounded-circle mb-3" alt="Jake Wilson" width="150" height="150">
                         <h5 class="text-white mb-2">Jake Wilson</h5>
                         <p class="text-forest mb-2">Product Manager</p>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card text-center p-4">
-                        <img src="/placeholder.svg?height=150&width=150" 
+                        <img src="images/UserPfp.png" 
                              class="rounded-circle mb-3" alt="Emma Davis" width="150" height="150">
                         <h5 class="text-white mb-2">Emma Davis</h5>
                         <p class="text-forest mb-2">Customer Experience Lead</p>
