--- a/contact.html
+++ b/contact.html
@@ -282,7 +282,7 @@
                             <p class="mb-2"><i class="fas fa-clock me-2"></i>Mon-Sat: 9AM-8PM, Sun: 10AM-6PM</p>
                         </div>
                         <div class="map-placeholder bg-secondary rounded-3 d-flex align-items-center justify-content-center" style="height: 200px;">
-                            <img src="images/Screenshot 2025-07-28 at 4.58.42 p.m..png" alt="1234 Mountain View Drive, Boulder, CO 80301" style="max-height: 12.5rem; width: 31rem; opacity: 0.7;">
+                            <img src="images/Screenshot 2025-07-29 at 9.05.42 a.m..png" alt="1234 Mountain View Drive, Boulder, CO 80301" style="height: 12.5rem; width: 31rem; opacity: 0.7;">
                         </div>
                     </div>
                 </div>
@@ -295,7 +295,7 @@
                             <p class="mb-2"><i class="fas fa-clock me-2"></i>Mon-Sat: 9AM-8PM, Sun: 10AM-6PM</p>
                         </div>
                         <div class="map-placeholder bg-secondary rounded-3 d-flex align-items-center justify-content-center" style="height: 200px;">
-                            <img src="images/Screenshot 2025-07-28 at 5.03.47 p.m..png" alt="1234 Mountain View Drive, Boulder, CO 80301" style="max-height: 12.5rem; width: 31rem; opacity: 0.7;">
+                            <img src="images/Screenshot 2025-07-29 at 9.07.04 a.m..png" alt="1234 Mountain View Drive, Boulder, CO 80301" style="height: 12.5rem; width: 31rem; opacity: 0.7;">
                         </div>
                     </div>
                 </div>
