fixed images from product page

--- a/products.html
+++ b/products.html
@@ -77,7 +77,7 @@
                 <!-- Tents -->
                 <div class="col-lg-3 col-md-6 product-item" data-category="tents" data-price="299.99" data-rating="5">
                     <div class="glass-card product-card h-100">
-                        <img src="/images/AlpineProTent.png" 
+                        <img src="images/AlpineProTent.png" 
                              class="card-img-top" alt="Alpine Pro Tent">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Alpine Pro Tent</h5>
@@ -99,7 +99,7 @@
 
                 <div class="col-lg-3 col-md-6 product-item" data-category="tents" data-price="199.99" data-rating="4">
                     <div class="glass-card product-card h-100">
-                        <img src="/images/FamilyDomeTent.png" 
+                        <img src="images/FamilyDomeTent.png" 
                              class="card-img-top" alt="Family Dome Tent">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Family Dome Tent</h5>
@@ -122,7 +122,7 @@
                 <!-- Cookware -->
                 <div class="col-lg-3 col-md-6 product-item" data-category="cookware" data-price="89.99" data-rating="4">
                     <div class="glass-card product-card h-100">
-                        <img src="/images/TrailChefSet.png" 
+                        <img src="images/TrailChefSet.png" 
                              class="card-img-top" alt="Trail Chef Set">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Trail Chef Set</h5>
@@ -144,7 +144,7 @@
 
                 <div class="col-lg-3 col-md-6 product-item" data-category="cookware" data-price="45.99" data-rating="5">
                     <div class="glass-card product-card h-100">
-                        <img src="/images/PortableCampStove.png" 
+                        <img src="images/PortableCampStove.png" 
                              class="card-img-top" alt="Portable Camp Stove">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Portable Camp Stove</h5>
@@ -167,7 +167,7 @@
                 <!-- Sleeping Gear -->
                 <div class="col-lg-3 col-md-6 product-item" data-category="sleeping" data-price="199.99" data-rating="5">
                     <div class="glass-card product-card h-100">
-                        <img src="/images/SummitSleepingBag.png" 
+                        <img src="images/SummitSleepingBag.png" 
                              class="card-img-top" alt="Summit Sleeping Bag">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Summit Sleeping Bag</h5>
@@ -189,7 +189,7 @@
 
                 <div class="col-lg-3 col-md-6 product-item" data-category="sleeping" data-price="79.99" data-rating="4">
                     <div class="glass-card product-card h-100">
-                        <img src="/images/ComfortSleepPad.png" 
+                        <img src="images/ComfortSleepPad.png" 
                              class="card-img-top" alt="Comfort Sleep Pad">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Comfort Sleep Pad</h5>
@@ -212,7 +212,7 @@
                 <!-- Backpacks -->
                 <div class="col-lg-3 col-md-6 product-item" data-category="backpacks" data-price="149.99" data-rating="4">
                     <div class="glass-card product-card h-100">
-                        <img src="/images/ExplorerBackpack.png" 
+                        <img src="images/ExplorerBackpack.png" 
                              class="card-img-top" alt="Explorer Backpack">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Explorer Backpack</h5>
@@ -234,7 +234,7 @@
 
                 <div class="col-lg-3 col-md-6 product-item" data-category="backpacks" data-price="89.99" data-rating="5">
                     <div class="glass-card product-card h-100">
-                        <img src="/images/DayHikerPack.png" 
+                        <img src="images/DayHikerPack.png" 
                              class="card-img-top" alt="Day Hiker Pack">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Day Hiker Pack</h5>
