fixed images from index/home page

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card product-card h-100">
-                        <img src="/images/AlpineProTent.png" 
+                        <img src="images/AlpineProTent.png" 
                              class="card-img-top" alt="Alpine Pro Tent">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Alpine Pro Tent</h5>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card product-card h-100">
-                        <img src="/images/TrailChefSet.png" 
+                        <img src="images/TrailChefSet.png" 
                              class="card-img-top" alt="Trail Chef Set">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Trail Chef Set</h5>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card product-card h-100">
-                        <img src="/images/SummitSleepingBag.png" 
+                        <img src="images/SummitSleepingBag.png" 
                              class="card-img-top" alt="Summit Sleeping Bag">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Summit Sleeping Bag</h5>
@@ -184,7 +184,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="glass-card product-card h-100">
-                        <img src="/images/ExplorerBackpack.png" 
+                        <img src="images/ExplorerBackpack.png" 
                              class="card-img-top" alt="Explorer Backpack">
                         <div class="card-body p-4">
                             <h5 class="card-title text-white">Explorer Backpack</h5>
