fixed file not found in promotions page

--- a/promotions.html
+++ b/promotions.html
@@ -270,7 +270,7 @@
                                     <span class="text-white-75 ms-2">(247 reviews)</span>
                                 </div>
                             </div>
-                            <a href="product-detail.html" class="btn btn-primary glass-btn w-100">View Details</a>
+                            <a href="product_detail.html" class="btn btn-primary glass-btn w-100">View Details</a>
                         </div>
                     </div>
                 </div>
@@ -298,7 +298,7 @@
                                     <span class="text-white-75 ms-2">(189 reviews)</span>
                                 </div>
                             </div>
-                            <a href="product-detail.html" class="btn btn-primary glass-btn w-100">View Details</a>
+                            <a href="product_detail.html" class="btn btn-primary glass-btn w-100">View Details</a>
                         </div>
                     </div>
                 </div>
@@ -326,7 +326,7 @@
                                     <span class="text-white-75 ms-2">(312 reviews)</span>
                                 </div>
                             </div>
-                            <a href="product-detail.html" class="btn btn-primary glass-btn w-100">View Details</a>
+                            <a href="product_detail.html" class="btn btn-primary glass-btn w-100">View Details</a>
                         </div>
                     </div>
                 </div>
